--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "antd": "^5.21.1",
     "antd-style": "^3.6.2",
     "classnames": "^2.5.1",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.19",
     "fabric": "^6.4.0",
     "highlight.js": "^11.10.0",
     "lodash": "^4.17.21",
@@ -79,12 +79,13 @@
     "react-helmet-async": "^2.0.0",
     "react-highlight": "^0.15.0",
     "react-to-print": "^3.0.5",
+    "recharts": "^3.5.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^3.3.0",
     "@testing-library/react": "^16.0.1",
-    "@types/classnames": "^2.3.1",
+    "@types/classnames": "^2.3.4",
     "@types/express": "^4.17.21",
     "@types/history": "^4.7.11",
     "@types/jest": "^29.5.12",
